Add dashboard and entry pages, update styles

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
   font-family: cursive;
+  /* background-color: #c49a6c; */
 }
 /* ============================
    LANDING PAGE STYLES (land.html)
